--- a/assignments/index.html
+++ b/assignments/index.html
@@ -11,6 +11,7 @@
   <script src="prototypes.js"></script>
 </head>
 
+<!-- This is a test -->
 <body>
 <h1>JS III - Check your work in the console!</h1>
 </body>
